--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "mysql2": "^3.5.2",
     "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
     "otp-generator": "^4.0.1",
     "pg": "^8.11.1",
     "postgresql": "^0.0.1",
