--- a/src/config/config.json
+++ b/src/config/config.json
@@ -3,7 +3,7 @@
     "username": "harshkhare989",
     "password": "7G9Ev5cI5YYgfxEerMd0os0IuYQqk2fL",
     "database": "ecommerce_qrev",
-    "host": "dpg-ciun7qdiuiedpv0uhd80-a.oregon-postgres.render.com",
+    "host": "dpg-ciun7qdiuiedpv0uhd80-a",
     "dialect": "postgres",
     "logging": false,
     "dialectOptions": {
